--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@codesandbox/sandpack-react": "*",
     "@codesandbox/sandpack-themes": "*",
+    "@monaco-editor/react": "^4.6.0",
     "@reduxjs/toolkit": "^2.2.3",
     "eslint-config-next": "^14.0.0",
     "framer-motion": "^11.1.7",
     "next": "^14.0.0",
+    "next-redux-wrapper": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.1",
